# agent

./: .gitignore  LICENSE  README.md  pyproject.toml  readme
config/: default.yaml
examples/: advanced_workflow.py  basic_usage.py
src/: __init__.py
src/agents/: __init__.py  architecture_ledger.py  base.py  coder.py  compliance.py  git_agent.py  planner.py  reviewer.py  tester.py
src/memory/: __init__.py  architecture_ledger.py
src/orchestration/: __init__.py  group_chat.py
tests/: test_agents.py  test_orchestration.py
