[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen-advanced-agents"
version = "0.1.0"
description = "Advanced multi-agent system built on Microsoft AutoGen with architectural awareness, multi-stage validation, and enterprise-grade security"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "agents", "autogen", "automation", "code-generation", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyautogen>=0.2.0",
    "docker>=6.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "gitpython>=3.1.0",
    "semgrep>=1.50.0",
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.19.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]
security = [
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "osv-scanner>=1.0.0",
]

[project.scripts]
autogen-agents = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
